--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -17,7 +19,7 @@
   </nav>
 
   <main>
-    
+
   </main>
   
 </body>
